--- a/Frontend/src/style/Header.module.css
+++ b/Frontend/src/style/Header.module.css
@@ -1,51 +1,44 @@
-/* Resetting default styles */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/* Navbar styles */
 .navbar {
-    background-color: #222;
-    padding: 10px 0;
-    font-family: Arial, sans-serif;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
+    height: 8vh;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.logo {
-    object-fit: contain;
-    width: 80px;
-    height: 60px;
-    background-image: url("https://assets.materialup.com/uploads/61d86780-be13-47fa-81a6-226aac22db27/preview.jpg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    border-radius: 10px
-}
-
-.nav_links {
-    list-style: none;
+    padding: 10px 20px;
+    background-color: #333; /* Add your desired background color */
+    color: white; /* Add your desired text color */
+  }
+  
+  .container {
     display: flex;
-}
-
-.nav_link {
-    color: #fff;
+    align-items: center;
+  }
+  
+  .logo {
+    width: 65px; /* Add your desired width */
+/* Maintain aspect ratio */
+    border-radius: 40px;
+    object-fit: fill;
+    background-size: cover;
+  }
+  
+  .nav_links {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .nav_link {
+    margin-right: 15px; /* Adjust spacing between links */
+    color: white; /* Add your desired text color */
     text-decoration: none;
-    margin-left: 20px;
-    font-size: 18px;
-    transition: color 0.3s ease;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-}
-
-.nav_link:hover {
-    color: #FFA500;
-}
+    margin-left: 50px;
+    font-weight: 700;
+    font-size: 20px;
+  }
+  
+  .nav_link:last-child {
+    margin-right: 0; /* Remove margin for the last link */
+  }
+  
