--- a/Frontend/src/style/Header.module.css
+++ b/Frontend/src/style/Header.module.css
@@ -35,7 +35,11 @@
     text-decoration: none;
     margin-left: 50px;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+  .custom_select {
+    padding-right: 0rem;
   }
   .nav_btn {
    
