--- a/Frontend/src/style/Footer.module.css
+++ b/Frontend/src/style/Footer.module.css
@@ -5,7 +5,7 @@ body {
   }
   
   .footer {
-    background-color: #333;
+    background-color: #f87171;
     color: #fff;
     padding: 20px 0;
     text-align: center;
