--- a/Frontend/src/style/Header.module.css
+++ b/Frontend/src/style/Header.module.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: #333; /* Add your desired background color */
+    background-color: #f87171; /* Add your desired background color */
     color: white; /* Add your desired text color */
   }
   
